Add logo and test siret
